Added initial citybik.es search and image

--- a/notebooks/joining_data.ipynb
+++ b/notebooks/joining_data.ipynb
@@ -4,6 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# W3P2 - PART4 - city_bikes\n",
+    "\n",
+    "assignment file part 3\n",
+    "\n",
+    "----\n",
+    "\n",
     "Join the data from Part 1 with the data from Part 2 to create a new dataframe."
    ]
   },
@@ -66,7 +72,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -80,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
