--- a/notebooks/model_building.ipynb
+++ b/notebooks/model_building.ipynb
@@ -4,6 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# W3P2 - PART5 - model_building\n",
+    "\n",
+    "assignment file part 4\n",
+    "\n",
+    "----\n",
+    "\n",
     "Build a regression model."
    ]
   },
@@ -52,7 +58,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -66,7 +72,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
