--- a/notebooks/city_bikes.ipynb
+++ b/notebooks/city_bikes.ipynb
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -891,13 +891,13 @@
        "6       Boise, ID      US  boise-greenbike"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Must check the world's egocentric nutty Cousin:\n",
+    "# Peek at the egocentric nutty Cousin:\n",
     "USA = ctyBksCityCountry_df('US')\n",
     "USA.head(5)"
    ]
@@ -994,7 +994,7 @@
    "source": [
     "## Send a request to CityBikes for the city of your choice. \n",
     "\n",
-    "Sticking with Canada, its a tie between Toronto and Vancouver:"
+    "Sticking with Canada.  Its a tie between Toronto and Vancouver:"
    ]
   },
   {
