Added Categorical Encoding reference to research folder. Cleaned Yelp df

--- a/notebooks/city_bikes.ipynb
+++ b/notebooks/city_bikes.ipynb
@@ -14,13 +14,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import pandas as pd\n",
-    "import json"
+    "import json\n",
+    "from datetime import datetime\n",
+    "import pytz"
    ]
   },
   {
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +70,7 @@
        " 'name': 'Bublr Bikes'}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +117,7 @@
        "'RU'"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +197,7 @@
        "2  330  330"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +327,7 @@
        "9                     Mantova      IT                     bicincitta-mantova"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +438,7 @@
        "CH         20"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +494,7 @@
        " 'name': 'Bike Share Toronto'}"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +656,7 @@
        "1  Limerick      IE     limerick"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +721,7 @@
        "0  Wageningen      NL                cykl"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +807,7 @@
        "13   Igoumenitsa      GR   easybike-igoumenitsa"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +893,7 @@
        "6       Boise, ID      US  boise-greenbike"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +979,7 @@
        "66                  Andria      IT                            andria"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1039,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1060,7 @@
        "  'name': 'Mobi'}]"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1083,17 +1085,17 @@
     {
      "data": {
       "text/plain": [
-       "{'empty_slots': 16,\n",
+       "{'empty_slots': 22,\n",
        " 'extra': {'bank_card': False, 'slots': 35, 'status': 'online', 'uid': '0001'},\n",
-       " 'free_bikes': 19,\n",
+       " 'free_bikes': 13,\n",
        " 'id': '7a19c49f486d7c0c02b3685d7b240448',\n",
        " 'latitude': 49.262487,\n",
        " 'longitude': -123.114397,\n",
        " 'name': '0001 10th & Cambie',\n",
-       " 'timestamp': '2022-12-03T18:28:44.713000Z'}"
+       " 'timestamp': '2022-12-04T02:49:15.041000Z'}"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1125,7 @@
        "  'name': 'Bike Share Toronto'}]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1147,13 +1149,13 @@
     {
      "data": {
       "text/plain": [
-       "{'empty_slots': 7,\n",
+       "{'empty_slots': 9,\n",
        " 'extra': {'address': 'Donlands Station',\n",
        "  'altitude': 0.0,\n",
        "  'ebikes': 0,\n",
        "  'has_ebikes': True,\n",
-       "  'last_updated': 1670107390,\n",
-       "  'normal_bikes': 8,\n",
+       "  'last_updated': 1670122315,\n",
+       "  'normal_bikes': 6,\n",
        "  'payment': ['key', 'transitcard', 'creditcard', 'phone'],\n",
        "  'payment-terminal': True,\n",
        "  'post_code': 'M4J 1P3',\n",
@@ -1161,15 +1163,15 @@
        "  'returning': 1,\n",
        "  'slots': 15,\n",
        "  'uid': '7091'},\n",
-       " 'free_bikes': 8,\n",
+       " 'free_bikes': 6,\n",
        " 'id': '34ec939e3772ab6f8f9be4ae0c98f3a2',\n",
        " 'latitude': 43.681114,\n",
        " 'longitude': -79.3373885,\n",
        " 'name': 'Donlands Station',\n",
-       " 'timestamp': '2022-12-03T22:47:20.622000Z'}"
+       " 'timestamp': '2022-12-04T02:52:52.541000Z'}"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1189,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1284,21 +1286,21 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Queen St E / Woodward Ave</td>\n",
-       "      <td>15</td>\n",
-       "      <td>3</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2</td>\n",
        "      <td>19</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>True</td>\n",
-       "      <td>15</td>\n",
+       "      <td>17</td>\n",
        "      <td>[key, transitcard, creditcard, phone]</td>\n",
        "      <td>True</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>7303</td>\n",
-       "      <td>1670115479</td>\n",
+       "      <td>1670138656</td>\n",
        "      <td>Queen St E / Woodward Ave</td>\n",
-       "      <td>2022-12-04T01:02:46.175000Z</td>\n",
+       "      <td>2022-12-04T07:27:49.090000Z</td>\n",
        "      <td>43.665269</td>\n",
        "      <td>-79.319796</td>\n",
        "      <td>fb337bbed72e2be090071e199899b2be</td>\n",
@@ -1318,9 +1320,9 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>7301</td>\n",
-       "      <td>1670115494</td>\n",
+       "      <td>1670138837</td>\n",
        "      <td>Primrose Ave / Davenport Rd</td>\n",
-       "      <td>2022-12-04T01:02:46.176000Z</td>\n",
+       "      <td>2022-12-04T07:27:49.090000Z</td>\n",
        "      <td>43.671420</td>\n",
        "      <td>-79.445947</td>\n",
        "      <td>4ff88d5880e71aa40d34cfe5d09b0ca7</td>\n",
@@ -1328,21 +1330,21 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Queen St. E / Rhodes Ave.</td>\n",
-       "      <td>10</td>\n",
-       "      <td>12</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
        "      <td>23</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>True</td>\n",
-       "      <td>10</td>\n",
+       "      <td>11</td>\n",
        "      <td>[key, transitcard, creditcard, phone]</td>\n",
        "      <td>True</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>7309</td>\n",
-       "      <td>1670115606</td>\n",
+       "      <td>1670138753</td>\n",
        "      <td>Queen St. E / Rhodes Ave.</td>\n",
-       "      <td>2022-12-04T01:02:46.177000Z</td>\n",
+       "      <td>2022-12-04T07:27:49.091000Z</td>\n",
        "      <td>43.666224</td>\n",
        "      <td>-79.317693</td>\n",
        "      <td>a09c67c0b419654d907c9134b108e328</td>\n",
@@ -1350,21 +1352,21 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Bond St / Queen St E</td>\n",
-       "      <td>14</td>\n",
-       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "      <td>11</td>\n",
        "      <td>25</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>True</td>\n",
-       "      <td>14</td>\n",
+       "      <td>13</td>\n",
        "      <td>[key, transitcard, creditcard, phone]</td>\n",
        "      <td>True</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>7045</td>\n",
-       "      <td>1670115469</td>\n",
+       "      <td>1670138717</td>\n",
        "      <td>Bond St / Queen St E</td>\n",
-       "      <td>2022-12-04T01:02:46.197000Z</td>\n",
+       "      <td>2022-12-04T07:27:49.099000Z</td>\n",
        "      <td>43.653236</td>\n",
        "      <td>-79.376716</td>\n",
        "      <td>d6a9daee68070a8b106cfb598d81308c</td>\n",
@@ -1372,21 +1374,21 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Church St / Alexander St</td>\n",
-       "      <td>9</td>\n",
        "      <td>2</td>\n",
+       "      <td>10</td>\n",
        "      <td>15</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>True</td>\n",
-       "      <td>9</td>\n",
+       "      <td>2</td>\n",
        "      <td>[key, transitcard, creditcard, phone]</td>\n",
        "      <td>True</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>7044</td>\n",
-       "      <td>1670115632</td>\n",
+       "      <td>1670138651</td>\n",
        "      <td>Church St / Alexander St</td>\n",
-       "      <td>2022-12-04T01:02:46.202000Z</td>\n",
+       "      <td>2022-12-04T07:27:49.100000Z</td>\n",
        "      <td>43.663722</td>\n",
        "      <td>-79.380288</td>\n",
        "      <td>8f8af40d9388c8a3962559e8681d3db7</td>\n",
@@ -1397,32 +1399,32 @@
       ],
       "text/plain": [
        "                          name  free_bikes  empty_slots  slots  altitude  \\\n",
-       "0    Queen St E / Woodward Ave          15            3     19       0.0   \n",
+       "0    Queen St E / Woodward Ave          17            2     19       0.0   \n",
        "1  Primrose Ave / Davenport Rd           6            8     15       0.0   \n",
-       "2    Queen St. E / Rhodes Ave.          10           12     23       0.0   \n",
-       "3         Bond St / Queen St E          14           10     25       0.0   \n",
-       "4     Church St / Alexander St           9            2     15       0.0   \n",
+       "2    Queen St. E / Rhodes Ave.          11           11     23       0.0   \n",
+       "3         Bond St / Queen St E          13           11     25       0.0   \n",
+       "4     Church St / Alexander St           2           10     15       0.0   \n",
        "\n",
        "   ebikes  has_ebikes  normal_bikes                                payment  \\\n",
-       "0       0        True            15  [key, transitcard, creditcard, phone]   \n",
+       "0       0        True            17  [key, transitcard, creditcard, phone]   \n",
        "1       0        True             6  [key, transitcard, creditcard, phone]   \n",
-       "2       0        True            10  [key, transitcard, creditcard, phone]   \n",
-       "3       0        True            14  [key, transitcard, creditcard, phone]   \n",
-       "4       0        True             9  [key, transitcard, creditcard, phone]   \n",
+       "2       0        True            11  [key, transitcard, creditcard, phone]   \n",
+       "3       0        True            13  [key, transitcard, creditcard, phone]   \n",
+       "4       0        True             2  [key, transitcard, creditcard, phone]   \n",
        "\n",
        "   payment-terminal  renting  returning   uid  last_updated  \\\n",
-       "0              True        1          1  7303    1670115479   \n",
-       "1              True        1          1  7301    1670115494   \n",
-       "2              True        1          1  7309    1670115606   \n",
-       "3              True        1          1  7045    1670115469   \n",
-       "4              True        1          1  7044    1670115632   \n",
+       "0              True        1          1  7303    1670138656   \n",
+       "1              True        1          1  7301    1670138837   \n",
+       "2              True        1          1  7309    1670138753   \n",
+       "3              True        1          1  7045    1670138717   \n",
+       "4              True        1          1  7044    1670138651   \n",
        "\n",
        "                       address                    timestamp   latitude  \\\n",
-       "0    Queen St E / Woodward Ave  2022-12-04T01:02:46.175000Z  43.665269   \n",
-       "1  Primrose Ave / Davenport Rd  2022-12-04T01:02:46.176000Z  43.671420   \n",
-       "2    Queen St. E / Rhodes Ave.  2022-12-04T01:02:46.177000Z  43.666224   \n",
-       "3         Bond St / Queen St E  2022-12-04T01:02:46.197000Z  43.653236   \n",
-       "4     Church St / Alexander St  2022-12-04T01:02:46.202000Z  43.663722   \n",
+       "0    Queen St E / Woodward Ave  2022-12-04T07:27:49.090000Z  43.665269   \n",
+       "1  Primrose Ave / Davenport Rd  2022-12-04T07:27:49.090000Z  43.671420   \n",
+       "2    Queen St. E / Rhodes Ave.  2022-12-04T07:27:49.091000Z  43.666224   \n",
+       "3         Bond St / Queen St E  2022-12-04T07:27:49.099000Z  43.653236   \n",
+       "4     Church St / Alexander St  2022-12-04T07:27:49.100000Z  43.663722   \n",
        "\n",
        "   longitude                                id  \n",
        "0 -79.319796  fb337bbed72e2be090071e199899b2be  \n",
@@ -1432,7 +1434,7 @@
        "4 -79.380288  8f8af40d9388c8a3962559e8681d3db7  "
       ]
      },
-     "execution_count": 249,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1445,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1475,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1528,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
