Joining and cleaning tables

--- a/notebooks/yelp_foursquare_EDA.ipynb
+++ b/notebooks/yelp_foursquare_EDA.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "(655, 19)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 311,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -320,6 +320,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 316,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_fsq = pd.read_csv('../data/fsqPOI/df_fsq_sun1400h.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -330,96 +339,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>{'id': 17065, 'name': 'Farmers' Market', 'icon...</td>\n",
-       "      <td>{'id': 17069, 'name': 'Grocery Store / Superma...</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>{'id': 13035, 'name': 'Coffee Shop', 'icon.pre...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>{'id': 17119, 'name': 'Bicycle Store', 'icon.p...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>{'id': 10039, 'name': 'Music Venue', 'icon.pre...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>{'id': 13011, 'name': 'Gay Bar', 'icon.prefix'...</td>\n",
-       "      <td>{'id': 13016, 'name': 'Lounge', 'icon.prefix':...</td>\n",
-       "      <td>{'id': 13065, 'name': 'Restaurant', 'icon.pref...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   0  \\\n",
-       "0  {'id': 17065, 'name': 'Farmers' Market', 'icon...   \n",
-       "1  {'id': 13035, 'name': 'Coffee Shop', 'icon.pre...   \n",
-       "2  {'id': 17119, 'name': 'Bicycle Store', 'icon.p...   \n",
-       "3  {'id': 10039, 'name': 'Music Venue', 'icon.pre...   \n",
-       "4  {'id': 13011, 'name': 'Gay Bar', 'icon.prefix'...   \n",
-       "\n",
-       "                                                   1  \\\n",
-       "0  {'id': 17069, 'name': 'Grocery Store / Superma...   \n",
-       "1                                               None   \n",
-       "2                                               None   \n",
-       "3                                               None   \n",
-       "4  {'id': 13016, 'name': 'Lounge', 'icon.prefix':...   \n",
-       "\n",
-       "                                                   2  \n",
-       "0                                               None  \n",
-       "1                                               None  \n",
-       "2                                               None  \n",
-       "3                                               None  \n",
-       "4  {'id': 13065, 'name': 'Restaurant', 'icon.pref...  "
-      ]
-     },
-     "execution_count": 228,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [317], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Normalize the categories:\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m df_fsqcat \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mjson_normalize(df_fsq[\u001b[39m'\u001b[39;49m\u001b[39mcategories\u001b[39;49m\u001b[39m'\u001b[39;49m][\u001b[39m0\u001b[39;49m])\n\u001b[1;32m      3\u001b[0m df_fsqcat\u001b[39m.\u001b[39mhead()\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/miniforge/base/envs/base_env/lib/python3.10/site-packages/pandas/io/json/_normalize.py:446\u001b[0m, in \u001b[0;36m_json_normalize\u001b[0;34m(data, record_path, meta, meta_prefix, record_prefix, errors, sep, max_level)\u001b[0m\n\u001b[1;32m    444\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(data)\n\u001b[1;32m    445\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 446\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m\n\u001b[1;32m    448\u001b[0m \u001b[39m# check to see if a simple recursive function is possible to\u001b[39;00m\n\u001b[1;32m    449\u001b[0m \u001b[39m# improve performance (see #15621) but only for cases such\u001b[39;00m\n\u001b[1;32m    450\u001b[0m \u001b[39m# as pd.Dataframe(data) or pd.Dataframe(data, sep)\u001b[39;00m\n\u001b[1;32m    451\u001b[0m \u001b[39mif\u001b[39;00m (\n\u001b[1;32m    452\u001b[0m     record_path \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    453\u001b[0m     \u001b[39mand\u001b[39;00m meta \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    456\u001b[0m     \u001b[39mand\u001b[39;00m max_level \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    457\u001b[0m ):\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: "
+     ]
     }
    ],
    "source": [
